# path_optimizer

./: .gitignore  CMakeLists.txt
cmake/: FindIPOPT.cmake  FindOsqpEigen.cmake
config/: rvizConfig.rviz
launch/: demo.launch
log/: path_optimizer_demo.ERROR  path_optimizer_demo.INFO  path_optimizer_demo.WARNING
src/config/: planning_flags.cpp
src/path_optimizer/: path_optimizer.cpp
src/reference_path_smoother/: reference_path_smoother.cpp  tension_smoother.cpp  tension_smoother_2.cpp
src/test/: demo.cpp  path_optimizer_benchmark.cpp
